# control_hue

./: .gitmodules  CMakeLists.txt  chueconfigprocessor.cpp  chueconfigprocessor.h  chuejsonconfig.cpp  chuejsonconfig.h  controlHue_ru_RU.ts  hue.json  main.cpp  main.qml  qmlhuebridge.cpp  qmlhuebridge.h
.github/workflows/: cmake.yml
